<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/murucmuruc"
                android:text="@string/diagnose_4"
                android:textSize="35sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="30sp" />

            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/murucmuruc"
                android:text="@string/diagnose"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="318dp"
                android:layout_height="@dimen/imageheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_medium"
                app:srcCompat="@drawable/diagnose" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/murucmuruc"
                android:text="@string/diagnose_1"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/murucmuruc"
                android:text="@string/diagnose_2"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/murucmuruc"
                android:text="@string/diagnose_3"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>