<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/murucmuruc"
                android:text="@string/health1"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/i1"
                android:layout_width="@dimen/imagewidth"
                android:layout_height="@dimen/imageheight"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_gravity="center"
                app:srcCompat="@drawable/finger1" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/murucmuruc"
                android:text="@string/health2"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/i2"
                android:layout_width="@dimen/imagewidth"
                android:layout_height="@dimen/imageheight"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_gravity="center"
                app:srcCompat="@drawable/finger2" />

            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/murucmuruc"
                android:text="@string/health3"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/i3"
                android:layout_width="@dimen/imagewidth"
                android:layout_height="@dimen/imageheight"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_gravity="center"
                app:srcCompat="@drawable/finger3" />

            <TextView
                android:id="@+id/t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/murucmuruc"
                android:text="@string/health4"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/i4"
                android:layout_width="@dimen/imagewidth"
                android:layout_height="@dimen/imageheight"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_gravity="center"
                app:srcCompat="@drawable/finger4" />

            <TextView
                android:id="@+id/t5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/murucmuruc"
                android:text="@string/health5"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/i5"
                android:layout_width="@dimen/imagewidth"
                android:layout_height="@dimen/imageheight"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_gravity="center"
                app:srcCompat="@drawable/finger5" />

            <TextView
                android:id="@+id/t6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/murucmuruc"
                android:text="@string/health6"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/i6"
                android:layout_width="@dimen/imagewidth"
                android:layout_height="@dimen/imageheight"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_gravity="center"
                app:srcCompat="@drawable/finger6" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>