<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/murucmuruc"
                    android:text="@string/palm1"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/i1"
                    android:layout_width="@dimen/imagewidth"
                    android:layout_height="@dimen/imageheight"
                    android:layout_below="@id/t1"
                    android:layout_marginBottom="@dimen/margin_medium"
                    app:srcCompat="@drawable/palm" />
                <TextView
                    android:id="@+id/palm1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/t1"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_toEndOf="@id/i1"
                    android:fontFamily="@font/whitecat"
                    android:text="@string/palm2"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/palm2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/palm1"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_toEndOf="@id/i1"
                    android:fontFamily="@font/whitecat"
                    android:text="@string/palm2"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/palm3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/palm2"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_toEndOf="@id/i1"
                    android:fontFamily="@font/whitecat"
                    android:text="@string/palm3"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/palm4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/palm3"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_toEndOf="@id/i1"
                    android:fontFamily="@font/whitecat"
                    android:text="@string/palm4"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>